# zephyr-app-project-template

./: .gitignore  CMakeLists.txt  README.md  app_version.h.in  prj.conf  west.yml
.west/: config
src/: main.cpp
